tests/fw_rules_tests/policies/test1-networkpolicy.yaml


### First policy. Enables traffic to namespace kube-system from pods in namespace default

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-default-to-kube-system
  namespace: kube-system-new
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - namespaceSelector:
          matchLabels:
            unique-label: defaultNameSpace
